# peakForecast

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  automation.yaml  hacs.json  pyproject.toml
custom_components/peak_forecast/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  parser.py  sensor.py  strings.json
lovelace/: future-forecast-card.yaml  history-card.yaml
tests/: conftest.py  test_parser.py
tests/fixtures/: page-2026-05-06.html  page-2026-07-15.html
