[project]
name = "peak-forecast-ha"
version = "0.1.0"
description = "Home Assistant custom integration for Capital Electric peak forecast"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Mark Weishaar" }]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "beautifulsoup4>=4.12",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
